--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <div class="col-md-6">
             <div class="input-group flex-nowrap shadow-lg rounded">
               <input type="search" class="form-control rounded" placeholder="Search Task..." aria-label="Search Task"
-              aria-describedby="addon-wrapping" />  
+              aria-describedby="addon-wrapping" oninput="searchTask.apply(this, arguments)" />  
               <span class="input-group-text" id="basic-addon1">
                 <i class="fas fa-search"></i>
               </span>
